# DSKSFzPlayer

./: .gitignore  CMakeLists.txt  README.md  instrucciones.txt  xSync-DSKSFz.bat
.github/workflows/: build.yml
Resources/: install_notes.md  manual.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Effects/: EffectsChain.cpp  EffectsChain.h
src/SF2/: SF2Synth.cpp  SF2Synth.h
src/SFZ/: SFZParser.cpp  SFZParser.h  SFZRegion.h  SFZSynth.cpp  SFZSynth.h
src/UI/: DSKLookAndFeel.h  LibraryPanel.cpp  LibraryPanel.h  RemoteBanner.cpp  RemoteBanner.h  SF2PresetPicker.cpp  SF2PresetPicker.h
